<resources>
    <string name="app_name">Movie Application</string>
    <string name="map_api_key" translatable = "false">AIzaSyBbwdgXxwBWiSyjHKCsH3JeiF3WiZpvSsM</string>
    <string name="genre">genre</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="year_of_release">year of Release</string>
    <string name="duration">duration</string>
    <string name="horrors">Horrors</string>
    <string name="thrillers">Thrillers</string>
    <string name="comedies">Comedies</string>
    <string name="fantastic">Fantastic</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="add_recycler">//Add recyclerView</string>
    <string name="error">Error</string>
    <string name="loading">Loading</string>
    <string name="sucess">Success</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="reload">reload</string>
    <string name="add_to_favourite">add to favourite</string>
    <string name="service_button">Service Button</string>
    <string name="settings">Settings</string>
    <string name="adult">Adult</string>
    <string name="is_adult">Is Adult</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="content_provider">Content provider</string>
    <string name="Adult">ADULT</string>
    <string name="need_permission_to_find_location">Необходимо разрешение для определения местоположения</string>
    <string name="looks_like_location_disabled">Возможно, выключена геолокация</string>
    <string name="google_maps">Google Maps</string>
    <string name="add_address">Add address</string>
    <string name="address">Address</string>
    <string name="map_mode">map_mode</string>
    <string name="normal">normal</string>
    <string name="satellite">satellite</string>
    <string name="terrain">terrain</string>
    <string name="traffic">traffic</string>
    <string name="start">Start Position</string>
    <string name="new_position">New Position</string>
    <string name="search_movie_location">Search Movie Location</string>
    <string name="your_adress">Your address</string>
    <string name="close">Close</string>
    <string name="free_config">Free config</string>
</resources>