<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".framework.ui.main.SettingsFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/title_text_size"/>

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_adult"
        android:textSize="@dimen/title_text_size"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adult"
        android:textSize="@dimen/title_text_size"
        />

</LinearLayout>